Force to use English language for QML auto tests

Moreover, localization setting via QtWebEngine is fixed. System
localization setting can be overridden by --lang command line argument.

Task-number: QTBUG-45715
Change-Id: I39f3a891e55ee47a57afc394e849ea02b0c76ad5
Reviewed-by: Andras Becsi <andras.becsi@theqtcompany.com>
Reviewed-by: Pierre Rossi <pierre.rossi@theqtcompany.com>